[package]
name = "crosshair_hud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
image = "0.24.6"
winapi = "0.3.9"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["ttf","image","mixer"]
